[gd_scene load_steps=14 format=3 uid="uid://pgl57w144klk"]

[ext_resource type="Material" uid="uid://cdoqdu3ds8cs2" path="res://shaders/hit_flash_material.tres" id="1_jp723"]
[ext_resource type="Script" path="res://scripts/item.gd" id="2_fio8n"]
[ext_resource type="Script" path="res://scripts/crate.gd" id="2_nyfba"]
[ext_resource type="Resource" uid="uid://csb5aqafuims7" path="res://resources/items/bread.tres" id="3_nych7"]
[ext_resource type="Texture2D" uid="uid://dmm68eurt18q4" path="res://sprites/tilesets/forest_village_objects.png" id="3_vjrtp"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="4_y0ld6"]
[ext_resource type="Script" path="res://scripts/health.gd" id="5_cej34"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcs4v"]
size = Vector2(12, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdyqb"]
atlas = ExtResource("3_vjrtp")
region = Rect2(80, 0, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jv0c7"]
size = Vector2(13.9999, 12)

[sub_resource type="Animation" id="Animation_lcyvg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xopey"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_78mvk"]
_data = {
"RESET": SubResource("Animation_lcyvg"),
"hit_flash": SubResource("Animation_xopey")
}

[node name="Crate" type="StaticBody2D"]
script = ExtResource("2_nyfba")
drop_items = Array[ExtResource("2_fio8n")]([ExtResource("3_nych7")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_mcs4v")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("1_jp723")
texture = SubResource("AtlasTexture_rdyqb")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
position = Vector2(0, -11)
collision_layer = 4
collision_mask = 2
script = ExtResource("4_y0ld6")
health = NodePath("../Health")
knockback_disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 10)
rotation = 1.5708
shape = SubResource("RectangleShape2D_jv0c7")

[node name="Health" type="Node" parent="."]
script = ExtResource("5_cej34")
MAX_HEALTH = 4

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_78mvk")
}

[node name="RespawnTimer" type="Timer" parent="."]

[connection signal="Death" from="Health" to="." method="_on_health_death"]
[connection signal="Harm" from="Health" to="." method="_on_health_harm"]
